--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.2",
-  "@prisma/client": "^6.15.0",
-  "cors": "^2.8.5",
-  "express": "^4.18.2",
+    "@prisma/client": "^6.15.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-  "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -34,8 +34,9 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
     "concurrently": "^9.2.1",
+    "cypress": "^15.2.0",
     "tsx": "^4.20.5",
-  "typescript": "^5.2.2",
-  "vite": "^4.5.0"
+    "typescript": "^5.2.2",
+    "vite": "^7.1.7"
   }
 }
