--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.2",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "prisma": "^6.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
