--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
+# Dependencies
 node_modules
+
+# Build
+dist
+dist-ssr
+*.local
+
+# Cypress
+cypress/videos
+cypress/screenshots
+cypress/downloads
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
