--- a/package.json
+++ b/package.json
@@ -4,15 +4,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run frontend\" --names \"API,WEB\" --prefix-colors \"blue,green\"",
-    "frontend": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "node server.cjs",
-    "db:generate": "npx prisma generate",
-    "db:migrate": "npx prisma migrate dev",
-    "db:studio": "npx prisma studio",
-    "db:seed": "npx tsx prisma/seed.ts",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "cypress:run:chrome": "cypress run --browser chrome",
@@ -30,24 +24,16 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.2",
-    "@prisma/client": "^6.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "prisma": "^6.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
-    "concurrently": "^9.2.1",
     "cypress": "^15.2.0",
-    "tsx": "^4.20.5",
     "typescript": "^5.2.2",
     "vite": "^7.1.7"
   }
