--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"tsx watch server/index.ts\"",
+    "dev:frontend": "vite",
+    "dev:server": "tsx watch server/index.ts",
     "build": "tsc && vite build",
+    "build:server": "tsc -p server/tsconfig.json",
     "preview": "vite preview",
-    "cypress:open": "cypress open",
+    "cypress": "cypress open",
     "cypress:run": "cypress run",
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:firefox": "cypress run --browser firefox",
@@ -24,16 +27,26 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.2",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/node": "^22.19.1",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "cypress": "^15.2.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.2.2",
     "vite": "^7.1.7"
   }
